# cratch

./: CMakeLists.txt  README.md
include/miniz/: miniz.c
miniz/: miniz.c
source/: main.c
src/: main.c  zip.c  zip.h
